--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -1,11 +1,23 @@
-# Use Nginx to serve static files
-FROM nginx:1.27-alpine
+# Stage 1: Build the React application
+FROM node:20-alpine AS build
 
-# Copy your static frontend files (html, css, js) to the nginx html folder
-# This assumes your frontend files are in the root or a 'frontend' folder
-COPY . /usr/share/nginx/html
+WORKDIR /app
 
-# Copy the nginx configuration we created earlier
+# Copy package files for better caching
+COPY package*.json ./
+RUN npm install
+
+# Copy source and build
+COPY . .
+RUN npm run build
+
+# Stage 2: Serve with Nginx
+FROM nginx:stable-alpine
+
+# Copy the build output from Stage 1
+COPY --from=build /app/dist /usr/share/nginx/html
+
+# Copy custom Nginx config to handle React Router and API proxying
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 EXPOSE 80
