--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,47 +1,26 @@
 {
   "compilerOptions": {
-    "target": "ES2022",
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext",
-    "lib": ["ES2022", "DOM"],
-    "strict": true,
-    "esModuleInterop": true,
+    "target": "ESNext",
+    "lib": ["dom", "dom.iterable", "esnext"],
+    "allowJs": true,
     "skipLibCheck": true,
+    "strict": false,
+    "noImplicitAny": false,
     "forceConsistentCasingInFileNames": true,
+    "noEmit": true,
+    "esModuleInterop": true,
+    "module": "esnext",
+    "moduleResolution": "node",
     "resolveJsonModule": true,
-    "declaration": true,
-    "declarationMap": true,
-    "sourceMap": true,
-    "composite": true,
+    "isolatedModules": true,
+    "jsx": "preserve",
     "incremental": true,
-    "tsBuildInfoFile": ".tsbuildinfo",
     "baseUrl": ".",
     "paths": {
-      "@sovereignmap/core": ["packages/core/src/index.ts"],
-      "@sovereignmap/core/*": ["packages/core/src/*"],
-      "@sovereignmap/privacy": ["packages/privacy/src/index.ts"],
-      "@sovereignmap/privacy/*": ["packages/privacy/src/*"],
-      "@sovereignmap/consensus": ["packages/consensus/src/index.ts"],
-      "@sovereignmap/consensus/*": ["packages/consensus/src/*"],
-      "@sovereignmap/island": ["packages/island/src/index.ts"],
-      "@sovereignmap/island/*": ["packages/island/src/*"],
-      "@sovereignmap/hardware": ["packages/hardware/src/index.ts"],
-      "@sovereignmap/hardware/*": ["packages/hardware/src/*"],
-      "@sovereignmap/testing": ["packages/testing/src/index.ts"],
-      "@sovereignmap/testing/*": ["packages/testing/src/*"]
-    },
-    "outDir": "dist",
-    "rootDir": ".",
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true,
-    "strictNullChecks": true,
-    "strictPropertyInitialization": true,
-    "noImplicitAny": true,
-    "noImplicitThis": true,
-    "alwaysStrict": true
+      "@/*": ["./src/*"],
+      "@sovereignmap/core": ["./packages/core/src"]
+    }
   },
-  "include": ["packages/*/src/**/*", "apps/*/src/**/*", "examples/*/src/**/*"],
-  "exclude": ["node_modules", "dist", "build", "**/*.spec.ts", "**/*.test.ts"]
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "exclude": ["node_modules"]
 }
