--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,43 +17,32 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v4
 
+      - name: Patch Workspaces and Clean
+        run: |
+          # 1. Remove lockfile to prevent protocol conflicts
+          rm -f package-lock.json
+          # 2. Convert workspace:* to * in all package.json files
+          sed -i 's/workspace:\*/\*/g' package.json
+          find packages -name "package.json" -exec sed -i 's/workspace:\*/\*/g' {} +
+          echo "Workspaces patched for standard npm compatibility."
+
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
 
-      - name: Fix Workspace Protocol & Install
+      - name: Install Dependencies
         run: |
-          # Converts "workspace:*" to "*" to make it compatible with standard npm
-          sed -i 's/workspace:\*/\*/g' package.json
-          find packages -name "package.json" -exec sed -i 's/workspace:\*/\*/g' {} +
-          npm install --include=dev
-          npm install --workspaces
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'
+          # Use legacy-peer-deps to ignore the EventEmitter type conflicts temporarily
+          npm install --legacy-peer-deps
 
       - name: Build with Turbo
         run: |
-          npx turbo run build --filter=@sovereignmap/core
+          npx turbo run build --filter=@sovereignmap/core --filter=@sovereignmap/privacy
 
       - name: Build Docker images
         run: |
-          # Building fresh images for the 200-node scale test
           docker compose build --no-cache
 
       - name: Start Services
         run: docker compose up -d
-
-      - name: Wait for Backend Health
-        run: |
-          echo "Waiting for federated learning nodes to initialize..."
-          sleep 30
-
-      - name: Debug on Failure
-        if: failure()
-        run: |
-          docker compose logs
-          docker ps -a
