--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,7 @@ permissions:
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
@@ -31,12 +32,17 @@ jobs:
       - name: Install Dependencies
         run: pnpm install --no-frozen-lockfile
 
-      - name: Build Core Logic
-        run: pnpm run build --filter=@sovereignmap/core
+      - name: Build Packages
+        run: pnpm run build --filter "@sovereignmap/*"
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
 
       - name: Build Docker images
         run: |
-          # Fresh build for 200-node scale test
+          # Building fresh images for the 200-node scale test
           docker compose build --no-cache
 
       - name: Start Services
@@ -44,8 +50,8 @@ jobs:
 
       - name: Wait for Backend Health
         run: |
-          echo "Waiting for services to stabilize..."
-          sleep 30
+          echo "Waiting for federated learning nodes to initialize..."
+          sleep 45
 
       - name: Debug on Failure
         if: failure()
