--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,13 +15,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Code
+      - name: Checkout code
         uses: actions/checkout@v4
 
       - name: Install pnpm
-        uses: pnpm/action-setup@v2
+        uses: pnpm/action-setup@v4
         with:
-          version: 8
+          version: 9
+          run_install: false   # do not auto-install, avoids lockfile requirement
 
       - name: Set up Node.js
         uses: actions/setup-node@v4
@@ -29,10 +30,10 @@ jobs:
           node-version: '20'
           cache: 'pnpm'
 
-      - name: Install Dependencies
+      - name: Install dependencies
         run: pnpm install --no-frozen-lockfile
 
-      - name: Build Packages
+      - name: Build frontend packages
         run: pnpm run build --filter "@sovereignmap/*"
 
       - name: Set up Python
@@ -42,19 +43,20 @@ jobs:
 
       - name: Build Docker images
         run: |
-          # Building fresh images for the 200-node scale test
-          docker compose build --no-cache
+          docker compose -f docker-compose.200nodes.yml build --no-cache
 
-      - name: Start Services
-        run: docker compose up -d
+      - name: Start services
+        run: |
+          docker compose -f docker-compose.200nodes.yml up -d
 
-      - name: Wait for Backend Health
+      - name: Wait for backend health
         run: |
           echo "Waiting for federated learning nodes to initialize..."
           sleep 45
 
-      - name: Debug on Failure
+      - name: Debug on failure
         if: failure()
         run: |
-          docker compose logs
+          docker compose -f docker-compose.200nodes.yml logs
           docker ps -a
+
