--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,12 +23,15 @@ jobs:
         with:
           node-version: '20'
          # cache: 'npm'
-
+      
+      - name: Enable Corepack
+        run: corepack enable
+        
       - name: Install dependencies
         run: yarn install
 
       - name: Build frontend packages
-        run: npm run build --workspaces
+        run: yarn workspaces build
 
       - name: Set up Python
         uses: actions/setup-python@v4
