--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,7 +34,7 @@ jobs:
           YARN_ENABLE_IMMUTABLE_INSTALLS: false
 
       - name: Build frontend packages
-        run: yarn workspaces foreach -A run build
+        run: yarn workspaces foreach -A --exclude "@sovereignmap/frontend" run build
 
       - name: Set up Python
         uses: actions/setup-python@v4
