--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,62 +1,26 @@
-name: Build and Test
-
-on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
-
-permissions:
-  contents: read
-  packages: write
-
-jobs:
-  build:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-
-      - name: Enable Corepack
-        run: |
-          corepack enable
-          corepack prepare yarn@4.1.0 --activate
-
-      - name: Install dependencies
-        run: yarn install
-        env:
-          YARN_ENABLE_IMMUTABLE_INSTALLS: false
-
-      - name: Build Core Packages
-        # This excludes the frontend and examples to prevent TS5055 overwrite errors
-        run: yarn workspaces foreach -A --exclude "@sovereignmap/frontend" --exclude "@sovereignmap/example-*" run build
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'
-
-      - name: Build Docker images
-        run: |
-          docker compose -f docker-compose.200nodes.yml build --no-cache
-
-      - name: Start services
-        run: |
-          docker compose -f docker-compose.200nodes.yml up -d
-
-      - name: Wait for backend health
-        run: |
-          echo "Waiting for federated learning nodes to initialize..."
-          sleep 45
-
-      - name: Debug on failure
-        if: failure()
-        run: |
-          docker compose -f docker-compose.200nodes.yml logs
-          docker ps -a
+{
+  "compilerOptions": {
+    "target": "ESNext",
+    "module": "ESNext",
+    "moduleResolution": "node",
+    "strict": true,
+    "skipLibCheck": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "resolveJsonModule": true,
+    "declaration": true,
+    "sourceMap": true,
+    "composite": true,
+    "incremental": true,
+    "isolatedModules": true,
+    "allowJs": true,
+    "checkJs": false
+  },
+  "exclude": [
+    "node_modules",
+    "dist",
+    "frontend",
+    "examples",
+    "**/*.config.js"
+  ]
+}
