--- a/package.json
+++ b/package.json
@@ -1,68 +1,33 @@
 {
-  "name": "@sovereignmap/sdk",
-  "version": "0.3.0-beta-rc1",
-  "type": "module",
-  "private": true,
-  "description": "Sovereign Map DePIN SDK - Privacy-preserving decentralized mapping protocol with 55.5% Byzantine fault tolerance",
-  "keywords": [
-    "depin",
-    "federated-learning",
-    "privacy",
-    "byzantine-fault-tolerance",
-    "sgp-001",
-    "mapping",
-    "web3"
-  ],
-  "homepage": "https://github.com/rwilliamspbg-ops/Sovereign_Map_Federated_Learning#readme",
-  "bugs": {
-    "url": "https://github.com/rwilliamspbg-ops/Sovereign_Map_Federated_Learning/issues"
+  "compilerOptions": {
+    "target": "ESNext",
+    "module": "ESNext",
+    "moduleResolution": "node",
+    "lib": ["ESNext", "DOM"],
+    "strict": true,
+    "skipLibCheck": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "resolveJsonModule": true,
+    "declaration": true,
+    "sourceMap": true,
+    "composite": true,
+    "incremental": true,
+    "isolatedModules": true,
+    "allowJs": true,
+    "checkJs": false,
+    "baseUrl": ".",
+    "paths": {
+      "@sovereignmap/*": ["packages/*/src"]
+    }
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/rwilliamspbg-ops/Sovereign_Map_Federated_Learning.git"
-  },
-  "license": "Apache-2.0",
-  "author": "Sovereign Map Core Team <architects@sovereignmap.network>",
-  "workspaces": [
-    "packages/*",
-    "apps/*",
-    "examples/*"
-  ],
-  "scripts": {
-    "build": "turbo run build --filter=!@sovereignmap/example-*",
-    "build:libs": "turbo run build --filter=@sovereignmap/*",
-    "dev": "turbo run dev --parallel",
-    "test": "turbo run test --filter=!@sovereignmap/example-*",
-    "test:ci": "turbo run test:ci --filter=!@sovereignmap/example-*",
-    "lint": "turbo run lint --filter=!@sovereignmap/example-*",
-    "typecheck": "turbo run typecheck --filter=!@sovereignmap/example-*",
-    "clean": "turbo run clean && rm -rf node_modules",
-    "proto:generate": "buf generate proto/",
-    "wasm:build": "cd tooling/wasm && ./build.sh",
-    "wasm:copy": "cp tooling/wasm/pkg/*.wasm packages/core/wasm/ && cp tooling/wasm/pkg/*.js packages/core/src/wasm/",
-    "changeset": "changeset",
-    "version-packages": "changeset version",
-    "release": "turbo run build --filter=@sovereignmap/* && changeset publish",
-    "sdk:publish": "npm run build:libs && changeset publish",
-    "docs:build": "typedoc --out docs packages/*/src/index.ts",
-    "example:basic": "turbo run dev --filter=@sovereignmap/example-basic",
-    "example:aggregator": "turbo run dev --filter=@sovereignmap/example-aggregator"
-  },
-  "devDependencies": {
-    "@bufbuild/buf": "^1.28.1",
-    "@changesets/changelog-github": "^0.5.0",
-    "@changesets/cli": "^2.27.1",
-    "@turbo/gen": "^1.12.0",
-    "@types/node": "^20.11.0",
-    "prettier": "^3.2.4",
-    "turbo": "^1.12.0",
-    "typedoc": "^0.25.7",
-    "typescript": "^5.3.3"
-  },
-  "engines": {
-    "node": ">=18.0.0",
-    "npm": ">=9.0.0"
-  },
-"packageManager": "yarn@4.1.0"
+  "exclude": [
+    "node_modules",
+    "dist",
+    "frontend",
+    "examples",
+    "**/*.config.js",
+    "results-*"
+  ]
 }
 
