--- a/docker-compose.200nodes.yml
+++ b/docker-compose.200nodes.yml
@@ -74,7 +74,7 @@ services:
       interval: 20s
       timeout: 10s
       retries: 5
-    start_period: 60s
+      start_period: 60s
 
   aggregator:
     build:
@@ -122,7 +122,7 @@ services:
       - mongo
       - redis
     deploy:
-      replicas: 20 # Scaled down for GitHub Actions; use 200 for local prod hardware
+      replicas: 20
       resources:
         limits:
           cpus: '0.2'
