--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,19 +3,18 @@ name: Production Deployment
 on:
   push:
     tags:
-      - 'v*' # Triggers only when you create a version tag like v1.0.0
+      - 'v*'
+
+permissions:
+  contents: read
+  packages: write
 
 jobs:
- build-and-push:
+  build-and-push:
     runs-on: ubuntu-latest
-    # ADD THIS BLOCK BELOW
-    permissions:
-      contents: read    # To checkout the code
-      packages: write    # To push images to GHCR
-      security-events: write # Optional: allows CodeQL to log results
-
     steps:
       - name: Checkout Code
+# ... rest of the file ...
         uses: actions/checkout@v4
 
       - name: Log in to GitHub Container Registry
