--- a/aws-config.env
+++ b/aws-config.env
@@ -1,12 +1,37 @@
-# Sovereign FL 200-Node Test Configuration
-# Generated: Wed Feb 18 04:52:57 PST 2026
+# Sovereign FL 200-Node Test Configuration (Optimized for 2026)
+# Generated: $(date)
 
+# --- AWS Infrastructure Settings ---
 AWS_REGION=us-east-1
-AWS_ACCOUNT_ID=722762405531
-S3_BUCKET=sovereign-fl-results-722762405531
+AWS_ACCOUNT_ID=$(aws sts get-caller-identity --query Account --output text)
+S3_BUCKET=sovereign-fl-results-${AWS_ACCOUNT_ID}
 KEY_NAME=sovereign-fl-key
 IAM_ROLE=SovereignFL-EC2-Role
 VPC_NAME=sovereign-fl-vpc
-AGGREGATOR_INSTANCE_TYPE=c5.2xlarge
-CLIENT_INSTANCE_TYPE=t3.medium
-NODE_COUNT=200
+
+# --- Instance Scaling Strategy ---
+# Total Nodes: 200 | Instances: 8 | Density: 25 Nodes/Host
+AGGREGATOR_INSTANCE_TYPE=c7g.4xlarge 
+CLIENT_INSTANCE_TYPE=m7g.4xlarge
+INSTANCE_COUNT=8
+NODES_PER_INSTANCE=25
+TOTAL_NODE_COUNT=200
+
+# --- Docker & Networking Logic ---
+# Base port for the first container; increments by 1 per node
+BASE_PORT=8000
+DOCKER_IMAGE_NAME=sovereign-node:latest
+DOCKER_MEM_LIMIT=1g
+DOCKER_CPU_RESERVATION=0.5
+
+# --- Privacy & Consensus Params ---
+# SGP-001 Standard requirements
+LOCAL_EPOCHS=3
+BATCH_SIZE=32
+PRIVACY_EPSILON=4.0
+BFT_THRESHOLD=0.67
+
+# --- Cost Control ---
+USE_SPOT_INSTANCES=true
+MAX_SPOT_PRICE=0.85
+EOF
